--- a/IndexHome.html
+++ b/IndexHome.html
@@ -34,8 +34,8 @@
                 <span><a href="#">Contact sales</a></span>
                 <span><a href="#">Explore Content</a></span>
                 <span><a href="#">Play</a></span>
-                <span><a href="#">Sign up</a></span>
-                <span><a href="#">Login</a></span>
+                <span><a href="indexSignup.html">Sign up</a></span>
+                <span><a href="indexLogin.html">Login</a></span>
                 <button class="ntt"><img src="edu5.svg" alt=""></button>
             </div>
         </nav>
