--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
                         <div class="box-info">
                             <div class="detail">
                                 <div class="man">
-                                    <img src="cross.svg" alt="">
+                                   <button onclick="startON()"><img src="cross.svg" alt=""></button>
 
                                 </div>
                             </div>
@@ -71,6 +71,10 @@
 
 </body>
 <script>
+    function startON() {
+        window.location.href="dashboard.html"  
+    }
+          
 
 </script>
 
